{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 140,
  "lineage": "11cbc764-0ae1-0536-85b5-1b4e0eadde6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:internet-gateway/igw-05a9cbb2714e27bda",
            "id": "igw-05a9cbb2714e27bda",
            "owner_id": "840515967820",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-igw",
              "Project": "oficina"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-igw",
              "Project": "oficina"
            },
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:route-table/rtb-002c05464c8a67e42",
            "id": "rtb-002c05464c8a67e42",
            "owner_id": "840515967820",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a9cbb2714e27bda",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-public-rt",
              "Project": "oficina"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-public-rt",
              "Project": "oficina"
            },
            "timeouts": null,
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040c61067c5070227",
            "route_table_id": "rtb-002c05464c8a67e42",
            "subnet_id": "subnet-0e6b6dea063df3c10"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8937833c4ba676",
            "route_table_id": "rtb-002c05464c8a67e42",
            "subnet_id": "subnet-010d9863905b33715"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:security-group/sg-084cc38ab7c341478",
            "description": "Security group para o cluster EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084cc38ab7c341478",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "oficina-eks-cluster-20260410175553362700000001",
            "name_prefix": "oficina-eks-cluster-",
            "owner_id": "840515967820",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-eks-cluster-sg",
              "Project": "oficina"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-eks-cluster-sg",
              "Project": "oficina"
            },
            "timeouts": null,
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:security-group/sg-0b357e5520ac2373a",
            "description": "Security group para os nodes do EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b357e5520ac2373a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API porta 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Comunicacao entre nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "oficina-eks-nodes-20260410175553367800000002",
            "name_prefix": "oficina-eks-nodes-",
            "owner_id": "840515967820",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-eks-nodes-sg",
              "Project": "oficina"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-eks-nodes-sg",
              "Project": "oficina"
            },
            "timeouts": null,
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:subnet/subnet-07eeea0b439c01886",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eeea0b439c01886",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840515967820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-private-1",
              "Project": "oficina"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-private-1",
              "Project": "oficina"
            },
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:subnet/subnet-03cddc837ea1cf08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cddc837ea1cf08e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840515967820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-private-2",
              "Project": "oficina"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-private-2",
              "Project": "oficina"
            },
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:subnet/subnet-0e6b6dea063df3c10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6b6dea063df3c10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840515967820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-public-1",
              "Project": "oficina",
              "kubernetes.io/cluster/oficina-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-public-1",
              "Project": "oficina",
              "kubernetes.io/cluster/oficina-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:subnet/subnet-010d9863905b33715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010d9863905b33715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840515967820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-public-2",
              "Project": "oficina",
              "kubernetes.io/cluster/oficina-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-public-2",
              "Project": "oficina",
              "kubernetes.io/cluster/oficina-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01450388aa0b72948"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840515967820:vpc/vpc-01450388aa0b72948",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0568b880d631b02d4",
            "default_route_table_id": "rtb-08b608e570459516c",
            "default_security_group_id": "sg-0d0baf80e1c5da21f",
            "dhcp_options_id": "dopt-0ff9d5ab86e6945d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01450388aa0b72948",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b608e570459516c",
            "owner_id": "840515967820",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "oficina-vpc",
              "Project": "oficina"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "oficina-vpc",
              "Project": "oficina"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "oficina",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "oficina",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/part-of": "oficina",
                  "managed-by": "terraform"
                },
                "name": "oficina",
                "resource_version": "1294",
                "uid": "6438d13a-ef88-4961-9c5e-8a9fea5a90a0"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_security_group.eks_cluster",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.main",
            "data.aws_iam_role.eks_cluster",
            "data.aws_iam_role.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "oficina/oficina-api",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/name": "api",
                  "app.kubernetes.io/part-of": "oficina"
                },
                "name": "oficina-api",
                "namespace": "oficina",
                "resource_version": "1344",
                "uid": "567285dc-c911-4e62-a5ab-9eb79e33a66c"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.211.182",
                "cluster_ips": [
                  "172.20.211.182"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32011,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "oficina-api"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a567285dcc9114e62a5ab9eb79e33a66-1565499774.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_security_group.eks_cluster",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.main",
            "data.aws_iam_role.eks_cluster",
            "data.aws_iam_role.eks_nodes",
            "kubernetes_namespace.oficina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mailpit",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "oficina/oficina-mailpit",
            "metadata": [
              {
                "generation": 0,
                "name": "oficina-mailpit",
                "namespace": "oficina",
                "resource_version": "1303",
                "uid": "f7b1a815-2506-4d1f-8782-a7fdf1e3f720"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.153.95",
                "cluster_ips": [
                  "172.20.153.95"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "smtp",
                    "node_port": 0,
                    "port": 1025,
                    "protocol": "TCP",
                    "target_port": "1025"
                  },
                  {
                    "name": "web",
                    "node_port": 0,
                    "port": 8025,
                    "protocol": "TCP",
                    "target_port": "8025"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "oficina-mailpit"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_security_group.eks_cluster",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.main",
            "data.aws_iam_role.eks_cluster",
            "data.aws_iam_role.eks_nodes",
            "kubernetes_namespace.oficina"
          ]
        }
      ]
    }
  ]
}